--- a/src/app/beer/beer.component.html
+++ b/src/app/beer/beer.component.html
@@ -2,7 +2,7 @@
   beer works!
 </p>
 
-<ul *ngFor="let beer of masterBeerList"><strong>{{beer.name}}</strong>
+<ul *ngFor="let beer of childBeerList"><strong>{{beer.name}}</strong>
   <li>Brand: {{beer.brand}}</li>
   <li>Price: ${{beer.price}}</li>
   <li>Alcohol Content: {{beer.alcoholContent}}%</li>
