Clean up code, working prototype

--- a/src/app/beer/beer.component.html
+++ b/src/app/beer/beer.component.html
@@ -1,8 +1,4 @@
-<p>
-  beer works!
-</p>
-
-<ul *ngFor="let beer of childBeerList"><strong>{{beer.name}}</strong><button (click)="showEditKeg(beer)">Edit beer</button>
+<ul *ngFor="let beer of childBeerList"><strong>{{beer.name}}</strong><button (click)="showEditKeg(beer)" *ngIf="!beer.show">Edit beer</button>
   <form *ngIf="beer.show">
     <input type="text" value={{beer.name}} #newName>
     <input type="text" value={{beer.brand}} #newBrand>
@@ -10,6 +6,7 @@
     <input type="number" value={{beer.alcoholContent}} #newAlcoholContent>
     <button type="submit" (click) = "editKeg(beer, newName.value, newBrand.value, newPrice.value, newAlcoholContent.value)">Submit</button>
   </form>
+
 
   <li>Brand: {{beer.brand}}</li>
   <li>Price: ${{beer.price}}</li>
