--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,5 @@
 
   <app-beer [childBeerList] = "masterBeerList"></app-beer>
   <app-add-keg (acceptBeer)="addNewKeg($event)"></app-add-keg>
-  <app-edit-keg></app-edit-keg>
+  <!-- <app-edit-keg></app-edit-keg> -->
 </div>
